--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
-    "db:deploy": "prisma migrate deploy"
+    "db:deploy": "prisma migrate deploy",
+    "db:seed": "pnpm prisma db seed"
   },
   "keywords": [],
   "author": "Alan Mauro Franco <alanmfrancodev@hotmail.com> (http://github.com/alnmaurofranco)",
